src/test/ui/generic-associated-types/issue-88595.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/issue-88595.rs:21:35
   |
LL |     fn a(&'a self) -> Self::B<'a> {}
   |                                   ^^
   |
note: lifetime used multiple times
  --> $DIR/issue-88595.rs:18:6
   |
LL | impl<'a> A<'a> for C {
   |      ^^
LL |     type B<'b> = impl Clone;
   |            ^^

error: aborting due to previous error

